# IDASlicer

./: .gitignore  LICENSE  README.md  README_zh.md  ida-plugin.json  idaslicer.py  pyproject.toml
obj_minis/: elf_arm64.i64  macho_arm64.i64
